Portfolio - Fixed a bug with footer on mobile + new favicon

--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,7 @@ footer hr {
 
 .rights-container {
     grid-area: rights;
+    width: 100%;
     color: var(--light-tone);
     text-align: center;
     margin-top: 0.5rem;
